feat: add role to user and include it in JWT
