# server/src/database/trait.rs
@@ -50,6 +50,8 @@ pub trait Database: Send + Sync {
                     AuthDbError::Init(format!("failed to set the app admin initial password: {e}"))
                 })?,
                 change_password: true,
+                roles: Vec::new(),
+                domain: None,
             };
             self.create_userpass(&app_user_pass).await?;
             // create the admin in the admin table
